# OOP-project

./: .gitignore  CMakeLists.txt
include/: Constants.hpp  app.hpp  command.hpp  device.hpp  gadget.hpp  houseManager.hpp  housing.hpp  lexer.hpp  main.hpp  property.hpp  ruleProcessor.hpp  sensor.hpp  utils.hpp  zone.hpp
include/user-input-processing/: token.hpp
src/: app.cpp  comand.cpp  device.cpp  gadget.cpp  houseManager.cpp  housing.cpp  lexer.cpp  main.cpp  property.cpp  ruleProcessor.cpp  sensor.cpp  test.cpp  token.cpp  utils.cpp  zone.cpp
tests/: tests.txt
user-commands/: test1.txt
